# FlexiYield

./: .gitignore  AGENT_RULES_AND_GUIDE.md  Anchor.toml  Cargo.toml  README.md  RoadMap.md  Start.md  TEST_COVERAGE.md  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
Project_Rules/: WorkFlow.md  chat-title.txt  project.md  rules.md
app/: .env.example  .gitignore  layout.tsx  package.json  page.tsx  pnpm-lock.yaml
app/app/: layout.tsx  page.tsx
app/scripts/: deploy-programs.ts
app/src/components/: BalancePanel.tsx  CompositionChart.tsx  Header.tsx  WalletProvider.tsx
app/src/lib/: solana-adapter.ts
programs/: TESTING.md
programs/basket/: Cargo.toml
programs/basket/src/: lib.rs
programs/basket/tests/: basket_test.rs  edge_cases.rs  flow.rs
programs/rebalance/: Cargo.toml
programs/rebalance/src/: lib.rs
programs/rebalance/tests/: rebalance_tests.rs
programs/strategy/: Cargo.toml
programs/strategy/src/: lib.rs
programs/strategy/tests/: strategy_tests.rs
scripts/: README.md  airdrop-devnet-sol.ts  create-mints.ts  demo-helper.ts  demo.ts  deploy-programs.ts  fix-summary.sh  package.json  seed-balances.ts  test-setup.ts  tsconfig.json  wallet.ts
shared/: package-lock.json  package.json  tsconfig.json
shared/lib/: solana-adapter.js  solana-adapter.ts
