[package]
name = "basket"
version = "0.1.0"
edition = "2021"

[lib]
name = "basket"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[dev-dependencies]
solana-program-test = "1.18.16"
solana-sdk = "1.18.16"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
